--- a/index.html
+++ b/index.html
@@ -14,33 +14,30 @@
       <section class="top">
         <form onsubmit="formSubmitHandler(event)" class="form-container">
           <h1>Formulário</h1>
-          <div class="mb-3">
-            <label for="exampleFormControlInput1" class="form-label"
-              >Nome</label
+          <div class="row mb-3 g-1">
+            <label class="form-label"
+              >Nome:</label
             >
-            <input
-              name="firstName"
-              type="text"
-              class="form-control"
-              id="exampleFormControlInput1"
-              placeholder="Nome"
-            />
+            <div class="col">
+              <input
+                name="firstName"
+                type="text"
+                class="form-control"
+                placeholder="Nome"
+              />
+            </div>
+            <div class="col">
+              <input
+                name="lastName"
+                type="text"
+                class="form-control"
+                placeholder="Sobrenome"
+              />
+            </div>
           </div>
-          <div class="mb-3">
-            <label for="exampleFormControlInput1" class="form-label"
-              >Sobrenome</label
-            >
-            <input
-              name="lastName"
-              type="text"
-              class="form-control"
-              id="exampleFormControlInput1"
-              placeholder="Sobrenome"
-            />
-          </div>
-          <div class="row mb-3">
-            <label for="exampleFormControlInput1" class="form-label"
-              >Email</label
+          <div class="row mb-3 g-1">
+            <label class="form-label"
+              >Email:</label
             >
             <div class="col">
               <input
@@ -59,19 +56,20 @@
               />
             </div>
           </div>
-          <div class="mb-2">
-            <label for="exampleFormControlInput1" class="form-label"
-              >Celular</label
-            >
-            <input
+          <div class="col-6 mb-2 flex-row allign-items-center">
+            <label class="form-label">
+              Celular:</label
+              >
+              <input
               name="phone"
               type="tel"
-              class="form-control"
-              id="exampleFormControlInput1"
+              class="form-control "
               placeholder="(11) 99999-9999"
-            />
-          </div>
-          <button type="submit" class="btn btn-primary">Adicionar</button>
+              />
+            </div>
+            <div class="btn-row ">
+              <button type="submit" class="btn btn-primary">Adicionar</button>
+            </div>
         </form>
       </section>
       <section class="bottom">
