Implement deletion button

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
               <span class="contact-email">E-mail</span>
               <span class="contact-mobile">Telefone</span>
             </div>
+            <button type="button" class="btn btn-danger btn-delete-contact">Excluir</button>
           </li>
         </ul>
       </section>
