Implement success message support

--- a/index.html
+++ b/index.html
@@ -56,10 +56,13 @@
               class="form-control"
               placeholder="(11) 99999-9999" />
           </div>
-          <div class="btn-row">
+          <div class="btn-row btn-add-contact">
             <button type="submit" class="btn btn-primary">Adicionar</button>
           </div>
         </form>
+        <div class="alert alert-success visually-hidden" role="alert">
+          A simple success alert—check it out!
+        </div>
       </section>
 
       <section class="bottom">
