Add id to contact-form

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header></header>
     <main>
       <section class="top">
-        <form onsubmit="formSubmitHandler(event)" class="form-container">
+        <form class="form-container" id="contact-form">
           <h1>Cadastrar contatos</h1>
           <div class="row mb-3 g-1">
             <label class="form-label">Nome:</label>
