--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <label class="form-label">Email:</label>
             <div class="col">
               <input
-                name="emailAdress"
+                name="emailAddress"
                 type="text"
                 class="form-control"
                 placeholder="email" />
@@ -75,7 +75,9 @@
               <span class="contact-email">E-mail</span>
               <span class="contact-mobile">Telefone</span>
             </div>
-            <button type="button" class="btn btn-danger btn-delete-contact">Excluir</button>
+            <button type="button" class="btn btn-danger btn-delete-contact">
+              Excluir
+            </button>
           </li>
         </ul>
       </section>
