Implement contact adding

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <label class="form-label">Nome:</label>
             <div class="col">
               <input
+                required
                 name="firstName"
                 type="text"
                 class="form-control"
@@ -35,22 +36,25 @@
             <label class="form-label">Email:</label>
             <div class="col">
               <input
+                required
                 name="emailAddress"
-                type="text"
+                type="email"
                 class="form-control"
-                placeholder="email" />
+                placeholder="email@servidor.com" />
             </div>
-            <div class="col">
+            <!-- <div class="col">
               <input
+                required
                 name="mailServer"
                 type="text"
                 class="form-control"
                 placeholder="@servidor.com" />
-            </div>
+            </div> -->
           </div>
           <div class="col-6 mb-2 flex-row allign-items-center">
             <label class="form-label"> Celular:</label>
             <input
+              required
               name="phone"
               type="tel"
               class="form-control"
