--- a/index.html
+++ b/index.html
@@ -63,19 +63,17 @@
 
       <section class="bottom">
         <h1>Lista de Contatos</h1>
-        <div class="search-field gap-1">
-          <form class="form-container" id="search-form">
+          <form class="form-container gap-1" id="search-form">
             <input
-              name="search-field"
+              name="searchTerm"
               type="text"
               class="form-control"
               id="floatingInputValue"
               placeholder="Buscar contato" />
+              <button type="submit" class="btn btn-outline-primary">
+                Buscar
+              </button>
           </form>
-          <button type="submit" class="btn btn-outline-primary">
-            Buscar
-          </button>
-        </div>
         <ul class="list-group">
           <li class="list-group-item">
             <img src="" />
