--- a/index.html
+++ b/index.html
@@ -63,17 +63,18 @@
 
       <section class="bottom">
         <h1>Lista de Contatos</h1>
-          <form class="form-container gap-1" id="search-form">
-            <input
-              name="searchTerm"
-              type="text"
-              class="form-control"
-              id="floatingInputValue"
-              placeholder="Buscar contato" />
-              <button type="submit" class="btn btn-outline-primary">
-                Buscar
-              </button>
-          </form>
+        <form class="form-container gap-1" id="search-form">
+          <input
+            name="searchTerm"
+            type="text"
+            class="form-control"
+            id="floatingInputValue"
+            placeholder="Buscar contato" />
+          <button type="submit" class="btn btn-outline-primary">Buscar</button>
+        </form>
+        <div class="alert alert-danger visually-hidden" role="alert">
+          Nenhum contato encontrado
+        </div>
         <ul class="list-group">
           <li class="list-group-item">
             <img src="" />
